<resources>
    <string name="app_name">초간단 계산기</string>
    <string name="editName1"></string>
    <string name="editName2"></string>
    <string name="btnPlus">더하기</string>
    <string name="btnMinus">빼기</string>
    <string name="btnMultiply">곱하기</string>
    <string name="btnDivide">나누기</string>
    <string name="btnRest">나머지</string>
    <string name="textResult">계산 결과 : </string>
</resources>