<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/marginLarge"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="@dimen/editWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textSizeMedium"
        android:hint="@string/editName1"
        android:inputType="numberDecimal"
        android:textSize="@dimen/textSizeMedium"
        />
    <EditText
        android:id="@+id/edit2"
        android:layout_width="@dimen/editWidth"
        android:layout_height="wrap_content"
        android:hint="@string/editName2"
        android:layout_marginBottom="@dimen/textSizeMedium"
        android:textSize="@dimen/textSizeMedium"
        />
    <Button
        android:id="@+id/btnPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@dimen/editWidth"
        android:text="@string/btnPlus"
        android:textSize="@dimen/textSizeMedium"/>
    <Button
        android:id="@+id/btnMinus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@dimen/editWidth"
        android:text="@string/btnMinus"
        android:textSize="@dimen/textSizeMedium"/>
    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@dimen/editWidth"
        android:text="@string/btnMultiply"
        android:textSize="@dimen/textSizeMedium"/>
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@dimen/editWidth"
        android:text="@string/btnDivide"
        android:textSize="@dimen/textSizeMedium"/>
    <Button
        android:id="@+id/btnRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@dimen/editWidth"
        android:text="@string/btnRest"
        android:textSize="@dimen/textSizeMedium"/>
    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:textSize="@dimen/textSizeLarge"
        android:textColor="@color/red"
        android:text="@string/textResult"/>
</LinearLayout>